added hover effects

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <main>
     <div class="nft_card">
       <img src="images/image-equilibrium.jpg" alt="">
+      <div class="overlay"><img src="images/icon-view.svg" alt=""></div>
       <h2>Equilibrium #3429</h2>
       <p>Our Equilibrium collection promotes balance and calm.</p>
       <div class="info">
